Se agregan las pruebas de la función getT() al proyecto

--- a/.jshintrc
+++ b/.jshintrc
@@ -57,6 +57,9 @@
         "angular": false,
         "$": false,
         "Materialize": false,
-        "alert": false
+        "alert": false,
+        "describe": false,
+        "it" : false,
+        "beforeEach": false
     }
 }
